--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,5 @@
 <header>
-  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+<%= form_with url: destroy_user_session_path, method: :delete do %>
+  <%= submit_tag 'ログアウト', class: 'btn btn-danger' %>
+<% end %>
 </header>
