--- a/app/views/practice_records/new.html.erb
+++ b/app/views/practice_records/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Practice Record</h1>
+<h1> 練習記録作成</h1>
 
 <%= form_with model: @practice_record, local: true do |form| %>
   <% if @practice_record.errors.any? %>
