--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
 // app/assets/stylesheets/application.scss
 @import "bootstrap";
 @import "top";
+
+.custom-header-footer {
+    background-color: #d3eafd; /* 薄い青色 */
+  }
