--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,24 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application" %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true %>
 
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <% if user_signed_in? %>
       <%= render 'shared/header' %>
+      <%= render 'shared/sidebar' %>
     <% else %>
       <%= render 'shared/before_login_header' %>
     <% end %>
-    <%= yield %>
-    <%= render 'shared/footer' %>
+
+    <div class="container flex-grow-1">
+      <%= yield %> <!-- 各ページのコンテンツがここに表示される -->
+    </div>
+
+    <%= render 'shared/footer' %> 
   </body>
+
 </html>
