--- a/app/views/mypage/show.html.erb
+++ b/app/views/mypage/show.html.erb
@@ -1,6 +1,5 @@
-<div class='top-wrapper'>
-  <div class='top-inner-text'>
-    <h1>Golf lesson app</h1>
-    <p><%= @user.name %>様<p/>
-  </div>
+<div class="container text-center">
+    <h1>Golf Up</h1>
+    <p><%= @user.name %>様</p>
+    <h3>キーポイント</h3>
 </div>
