--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,4 +1,6 @@
 <header>
+  <nav class='navbar navbar-expand-lg navigation bg-primary'>
   <%= link_to 'ログイン', new_user_session_path, class: 'btn' %>
   <%= link_to '新規登録', new_user_registration_path, class: 'btn' %>
+  </nav>
 </header>
