--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,11 @@
-<footer>
-<p>golf</p>
+<footer id='footer' class='footer-bottom bg-primary'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-sm-6 col-12'>
+        <div class='copyright'>
+          <p>Copyright © 2024. Golf Up</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
