--- a/app/views/practice_records/index.html.erb
+++ b/app/views/practice_records/index.html.erb
@@ -15,7 +15,7 @@
         <td class="p-3"><%= record.goal %></td>
         <td class="p-3"><%= record.comment %></td>
         <td class="p-3">
-        <%= link_to '編集', edit_practice_record_path(record), class: 'btn btn-warning' %>
+        <%= link_to '詳細', practice_record_path(record), class: 'btn btn-primary' %>
         </td>
       </tr>
     <% end %>
