--- a/app/views/practice_records/edit.html.erb
+++ b/app/views/practice_records/edit.html.erb
@@ -1,22 +1,39 @@
-<h1>練習記録の編集</h1>
+<h1 class="text-center my-4">練習記録編集</h1>
 
-<%= form_for @practice_record do |f| %>
-  <div class="field">
-    <%= f.label :date %>
-    <%= f.datetime_select :date %>
-  </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <%= form_for @practice_record, html: { class: 'form-horizontal' } do |f| %>
 
-  <div class="field">
-    <%= f.label :goal %>
-    <%= f.text_field :goal %>
-  </div>
+        <div class="form-group row">
+          <%= f.label :date, class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= f.datetime_select :date, class: 'form-control' %>
+          </div>
+        </div>
 
-  <div class="field">
-    <%= f.label :comment %>
-    <%= f.text_area :comment %>
-  </div>
+        <div class="form-group row">
+          <%= f.label :goal, class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= f.text_field :goal, class: 'form-control' %>
+          </div>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "更新" %>
+        <div class="form-group row">
+          <%= f.label :comment, class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= f.text_area :comment, rows: 5, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-10 offset-sm-2">
+            <%= f.submit "更新", class: "btn btn-primary" %>
+          </div>
+        </div>
+
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
+
