--- a/app/views/practice_records/edit.html.erb
+++ b/app/views/practice_records/edit.html.erb
@@ -8,7 +8,9 @@
         <div class="form-group row">
           <%= f.label :date, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
-            <%= f.datetime_select :date, class: 'form-control' %>
+            <div class="date-select-inline">
+              <%= f.date_select :date, { use_month_numbers: true }, class: 'form-control-inline' %>
+            </div>
           </div>
         </div>
 
