--- a/app/views/key_points/index.html.erb
+++ b/app/views/key_points/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>主軸ポイント一覧</h1>
-
+  <%= link_to 'キーポイント作成', new_key_point_path %>
   <table class="table table-striped">
     <thead>
       <tr>
