--- a/app/views/key_points/new.html.erb
+++ b/app/views/key_points/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center my-4">練習記録作成</h1>
+<h1 class="text-center my-4">キーポイント作成</h1>
 
 <div class="container">
   <div class="row justify-content-center">
