--- a/app/views/key_points/index.html.erb
+++ b/app/views/key_points/index.html.erb
@@ -6,6 +6,7 @@
       <tr>
         <th>タイトル</th>
         <th>作成日</th>
+        <th>アクション</th>
       </tr>
     </thead>
     <tbody>
@@ -13,6 +14,8 @@
         <tr>
           <td><%= key_point.title %></td>
           <td><%= key_point.created_at.strftime("%Y-%m-%d") %></td>
+          <td>
+            <%= link_to '編集', edit_key_point_path(key_point), class: 'btn btn-warning' %>
         </tr>
       <% end %>
     </tbody>
