--- a/app/views/key_points/edit.html.erb
+++ b/app/views/key_points/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <%= form_for @key_point, html: { class: 'form-horizontal' } do |f| %>
+      <%= form_with model: @key_point, local: true do |f| %>
         <div class="form-group row">
           <%= f.label :title, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
