--- a/app/views/practice_records/edit.html.erb
+++ b/app/views/practice_records/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <%= form_for @practice_record, html: { class: 'form-horizontal' } do |f| %>
+      <%= form_with model:@practice_record, local: true do |f| %>
 
         <div class="form-group row">
           <%= f.label :date, class: 'col-sm-2 col-form-label' %>
