--- a/app/views/practice_records/new.html.erb
+++ b/app/views/practice_records/new.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <%= form_for @practice_record, html: { class: 'form-horizontal' }, local: true do |form| %>
+      <%= form_with model:@practice_record, local: true do |form| %>
         <div class="form-group row">
           <%= form.label :practice_menu_id, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
