--- a/app/views/practice_records/show.html.erb
+++ b/app/views/practice_records/show.html.erb
@@ -18,15 +18,13 @@
             <%= @practice_record.comment %>
           </p>
         </div>
-        <div class="card-footer text-center">
-          <div class="d-flex justify-content-between">
-            <%= link_to '編集', edit_practice_record_path(@practice_record), class: 'btn btn-warning' %>
+        <div class="card-footer">
+          <div class="d-flex justify-content-end">
+            <%= link_to '編集', edit_practice_record_path(@practice_record), class: 'btn btn-warning ms-2' %>
             <%= form_with url: practice_record_path(@practice_record), method: :delete do %>
-              <%= submit_tag '削除', class: 'btn btn-danger' %>
+              <%= submit_tag '削除', class: 'btn btn-danger ms-2' %>
             <% end %>
-          </div>
-          <div class="mt-3">
-            <%= link_to '一覧に戻る', practice_records_path, class: 'btn btn-secondary' %>
+            <%= link_to '一覧に戻る', practice_records_path, class: 'btn btn-secondary ms-2' %>
           </div>
         </div>
       </div>
