--- a/app/views/key_points/new.html.erb
+++ b/app/views/key_points/new.html.erb
@@ -7,7 +7,7 @@
         <div class="form-group row">
           <%= form.label :title, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
-            <%= form.text_field :title, class: 'form-control' %>
+            <%= form.text_field :title, placeholder: "35文字以内で入力してください", class: 'form-control' %>
           </div>
         </div>
 
