--- a/app/views/key_points/index.html.erb
+++ b/app/views/key_points/index.html.erb
@@ -14,8 +14,12 @@
         <tr>
           <td><%= key_point.title %></td>
           <td><%= key_point.created_at.strftime("%Y-%m-%d") %></td>
-          <td>
-            <%= link_to '編集', edit_key_point_path(key_point), class: 'btn btn-warning' %>
+          <td class="d-flex align-items-center">
+            <%= link_to '編集', edit_key_point_path(key_point), class: 'btn btn-warning ms-2' %>
+            <%= form_with url: key_point_path(key_point), method: :delete do %>
+              <%= submit_tag '削除', class: 'btn btn-danger ms-2' %>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     </tbody>
