--- a/app/views/mypage/show.html.erb
+++ b/app/views/mypage/show.html.erb
@@ -2,4 +2,8 @@
     <h1>Golf Up</h1>
     <p><%= @user.name %>様</p>
     <h3>キーポイント</h3>
+    <i class="fa fa-star"></i>
+    <i class="far fa-star"></i> <!-- 空の星 -->
+<i class="fas fa-star"></i> <!-- 塗りつぶしの星 -->
+<i class="fas fa-star-half-alt"></i> <!-- 半分の星 -->
 </div>
