--- a/app/views/practice_records/new.html.erb
+++ b/app/views/practice_records/new.html.erb
@@ -1,18 +1,18 @@
-<h1 class="text-center my-4">練習記録作成</h1>
+<h1 class="text-center my-4"><%= t('practice_records.new') %></h1>
 
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <%= form_with model:@practice_record, local: true do |form| %>
         <div class="form-group row">
-          <%= form.label :practice_menu_id, class: 'col-sm-2 col-form-label' %>
+          <%= form.label :practice_menu_id, t('practice_records.menu'),class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= form.number_field :practice_menu_id, class: 'form-control' %>
           </div>
         </div>
 
         <div class="form-group row">
-          <%= form.label :date, class: 'col-sm-2 col-form-label' %>
+          <%= form.label :date, t('practice_records.date'), class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="date-select-inline">
               <%= form.date_select :date, { use_month_numbers: true }, class: 'form-control-inline' %>
@@ -21,14 +21,14 @@
         </div>
 
         <div class="form-group row">
-          <%= form.label :goal, class: 'col-sm-2 col-form-label' %>
+          <%= form.label :goal, t('practice_records.goal'), class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= form.text_field :goal, class: 'form-control' %>
           </div>
         </div>
 
         <div class="form-group row">
-          <%= form.label :comment, class: 'col-sm-2 col-form-label' %>
+          <%= form.label :comment, t('practice_records.comment'), class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= form.text_area :comment, rows: 5, class: 'form-control' %>
           </div>
