Key_point_on_mypage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <div class="container flex-grow-1">
-      <%= yield %> <!-- 各ページのコンテンツがここに表示される -->
+      <%= yield %> 
     </div>
 
     <%= render 'shared/footer' %> 
