--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id='footer' class='footer-bottom bg-primary'>
+<footer id='footer' class='fixed-bottom bg-primary'>
   <div class='container'>
     <div class='row'>
       <div class='col-sm-6 col-12'>
