--- a/app/views/mypage/show.html.erb
+++ b/app/views/mypage/show.html.erb
@@ -1,9 +1,13 @@
-<div class="container text-center">
-    <h1>Golf Up</h1>
-    <p><%= @user.name %>様</p>
+<div class="container">
+  <div class="text-center">
+    <h1 class="mb-5">MyGolfDiary</h1>
     <h3>キーポイント</h3>
-    <i class="fa fa-star"></i>
-    <i class="far fa-star"></i> <!-- 空の星 -->
-<i class="fas fa-star"></i> <!-- 塗りつぶしの星 -->
-<i class="fas fa-star-half-alt"></i> <!-- 半分の星 -->
+    <div class="list-group">
+      <% @favorite_key_points.each do |f| %>
+        <div class="list-group-item">
+          <%= f.title %>
+        </div>
+      <% end %>
+    </div>  
+  </div>
 </div>
