--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class='navbar navbar-expand-lg navigation bg-primary'>
+  <nav class='navbar navbar-expand-lg navigation bg-primary fixed-top'>
   <%= image_tag('logo.png', class: 'logo') %>
   <%= link_to 'ログイン', new_user_session_path, class: 'btn' %>
   <%= link_to '新規登録', new_user_registration_path, class: 'btn' %>
