--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,11 +1,11 @@
-<div class="d-flex justify-content-end">
-  <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+<div class="d-flex justify-content-start">
+  <nav id="sidebarMenu" class="col-md-3 col-lg-2 bg-light sidebar">
+    <h3 class="text-center"><%=current_user.name%>様</h3>
     <div class="position-sticky pt-3 sidebar-sticky">
       <ul>
-        <li><%= link_to 'マイページ', mypage_path %></li>
-        <li><%= link_to '練習記録一覧', practice_records_path %></li>
-        <li><%= link_to 'キーポイント一覧', key_points_path %></li>
-        <!-- 他のメニュー項目 -->
+        <li class="py-2"><%= link_to 'マイページ', mypage_path %></li>
+        <li class="py-2"><%= link_to '練習記録一覧', practice_records_path %></li>
+        <li class="py-2"><%= link_to 'キーポイント一覧', key_points_path %></li>
       </ul>
     </div>
   </nav>
