--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -37,3 +37,11 @@
   width: auto;
   margin-right: 10px; // 要素の間にスペースを入れる
 }
+
+.sidebar {
+  padding-top: 75px; 
+}
+
+.main {
+  padding-top: 75px;   
+}
