--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
 
   </head>
 
-  <body class="d-flex flex-column min-vh-100">
-    <% if user_signed_in? %>
-      <%= render 'shared/header' %>
-      <%= render 'shared/sidebar' %>
-    <% else %>
-      <%= render 'shared/before_login_header' %>
-    <% end %>
-
-    <div class="container flex-grow-1">
-      <%= yield %> 
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <% if user_signed_in? %>
+          <%= render 'shared/header' %>
+        <% else %>
+          <%= render 'shared/before_login_header' %>
+        <% end %>
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pt-auto main">
+          <%= yield %>
+          <%= render 'shared/footer' %> 
+        </main>
+      </div>
     </div>
-
-    <%= render 'shared/footer' %> 
   </body>
 
 </html>
+
