--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class='row'>
       <div class='col-sm-6 col-12'>
         <div class='copyright'>
-          <p>Copyright © 2024. Golf Up</p>
+          <p>MyGolfDiary</p>
         </div>
       </div>
     </div>
