--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
-<div class="d-flex justify-content-start">
-  <nav id="sidebarMenu" class="col-md-3 col-lg-2 bg-light sidebar">
-    <h3 class="text-center"><%=current_user.name%>様</h3>
+<div class="d-flex">
+  <nav id="sidebarMenu" class="col-md-2 col-lg-2 bg-light sidebar">
+    
     <div class="position-sticky pt-3 sidebar-sticky">
       <ul>
         <li class="py-2"><%= link_to 'マイページ', mypage_path %></li>
