--- a/app/views/practice_menus/index.html.erb
+++ b/app/views/practice_menus/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Practices#index</h1>
 <p>Find me in app/views/practices/index.html.erb</p>
+  <%= link_to t('practice_menus.new'), new_practice_menu_path %>
