--- a/app/views/key_points/index.html.erb
+++ b/app/views/key_points/index.html.erb
@@ -3,7 +3,7 @@
   <p>お気に入り登録したキーポイントが、マイページに表示されます</p>
 
   <%= link_to t('key_point.new'), new_key_point_path %>
-  <table class="table table-striped">
+  <table class="table table-striped responsive-table">
     <thead>
       <tr>
         <th>タイトル</th>
