--- a/app/views/mypage/show.html.erb
+++ b/app/views/mypage/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="mb-5">MyGolfDiary</h1>
-  <div class="text-center">
+  <div class="text-center responsive-table">
     <h3>キーポイント</h3>
     <div class="list-group">
       <% @favorite_key_points.each do |f| %>
