--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,6 +16,7 @@
               メニュー
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <li><%= link_to '使用方法', howto_path, class: 'dropdown-item' %></li>
               <li><%= link_to 'マイページ', mypage_path, class: 'dropdown-item' %></li>
               <li><%= link_to '練習記録一覧', practice_records_path, class: 'dropdown-item' %></li>
               <li><%= link_to 'キーポイント一覧', key_points_path, class: 'dropdown-item' %></li>
